--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Online Marketplace</title>
@@ -13,6 +13,71 @@
         <h1>Online Marketplace</h1>
       </div>
       
+      <form id="item-form">
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="item">
+              <label>
+                <input type="radio" name="supply" value="corsair">
+                Corsair<br>
+                <img src="img/corsair.png"><br>
+                $59.99
+              </label>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="item">
+              <label>
+                <input type="radio" name="supply" value="asus">
+                Asus<br>
+                <img src="img/asus.jpeg">
+                <br>
+                $79.99
+              </label>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="item">
+              <label>
+                <input type="radio" name="supply" value="thermatake">
+                Thermatake<br>
+                <img src="img/thermatake.jpg">
+                <br>
+                $99.99
+              </label>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12 buttonCenter">
+            <button type="submit" class="btn hide" id="btnConfirm">Confirm Item</button>
+          </div>
+        </div>
+      </form>
+      <form class="hide" id="user-form">
+        <div class="row">
+          <div class="col-xs-6">
+            <div class="form-group">
+              <label for="name">Full Name:</label>
+              <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+              <label for="address">Address:</label>
+              <input type="text" class="form-control" id="address">
+            </div>
+          </div>
+          <div class="col-xs-6 buttonCenter">
+            <button type="submit" class="btn">Confirm Order</button>
+          </div>
+        </div>
+      </form>
+
+      <div class="row">
+        <div class="receipt">
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
