--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="col-xs-4">
             <div class="item">
               <label>
-                <input type="radio" name="supply" value="corsair">
+                <input type="radio" name="supply" value="Corsair">
                 Corsair<br>
                 <img src="img/corsair.png"><br>
                 $59.99
@@ -28,7 +28,7 @@
           <div class="col-xs-4">
             <div class="item">
               <label>
-                <input type="radio" name="supply" value="asus">
+                <input type="radio" name="supply" value="Asus">
                 Asus<br>
                 <img src="img/asus.jpeg">
                 <br>
@@ -39,7 +39,7 @@
           <div class="col-xs-4">
             <div class="item">
               <label>
-                <input type="radio" name="supply" value="thermatake">
+                <input type="radio" name="supply" value="Thermatake">
                 Thermatake<br>
                 <img src="img/thermatake.jpg">
                 <br>
@@ -74,8 +74,14 @@
       </form>
 
       <div class="row">
-        <div class="receipt">
-        </div>
+        <div class="col-xs-12">
+          <div class="hide" id="receipt">
+            <h1>Thanks for your purchase:</h1>
+            <h3 id=uName></h3>
+            <h1>Your item <span id="purch"></span> is being shipped to:</h1>
+            <h3 id=uAddress></h3>
+          </div>
+        </div>  
       </div>
 
     </div>
