--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="hide" id="receipt">
-            <h1>Thanks for your purchase:</h1>
+            <h1>Thanks for your purchase of <span id="price"></span>:</h1>
             <h3 id=uName></h3>
             <h1>Your item <span id="purch"></span> is being shipped to:</h1>
             <h3 id=uAddress></h3>
